# GustGurus-Drone-Project

./: .gitignore  Kinf_calc_final.py  README.md  control_stack.slxc  eta_lin_dyn.m  normalized_error_log.csv  p_dyn.m  p_lin_dyn.m  square-wave-tracking.py
app_api/: app-config
cache/: 21E42B8C.json  3DCF6AFB.json
crazyflie-firmware/: ._.flake8  ._.gitignore  ._.gitmodules  Makefile  normalized_error_log.csv
crazyflie-firmware-folders/: readme.txt
crazyflie-firmware-folders/src/modules/interface/controller/: controller_custom1.h  controller_custom2.h  controller_custom5.h  controller_custom_types.h
crazyflie-firmware/app_api/: app-config
crazyflie-firmware/cache/: 354FB693.json  E84D0577.json
crazyflie-firmware/src/modules/src/: power_distribution_quadrotor.c  stabilizer.c
crazyflie_simulation/: plotter1.py  plotter2.py  test.py
crazyflie_simulation/install/: local_setup.sh  setup.sh
crazyflie_simulation/log/: latest_build
crazyflie_simulation/src/controllers/: package.xml  setup.py
crazyflie_simulation/src/cpp_controllers/: CMakeLists.txt  package.xml  params.yaml
crazyflie_simulation/src/cpp_controllers/include/cpp_controllers/: CustomPidController.h  CustomPidControllerTypes.h  pid.h  pid_controller.h  sliding_mode_control.h
crazyflie_simulation/src/cpp_controllers/src/: CustomPidController.cpp  KeyboardControlNode.cpp  MotorControlNode.cpp  SmcMotorControlNode.cpp  pid.cpp  pid_controller.cpp  sliding_mode_control.cpp
crazyflie_simulation/src/crazyflie_gazebo/: package.xml  setup.cfg  setup.py
crazyflie_simulation/src/crazyflie_gazebo/config/: ros_gz_crazyflie_bridge.yaml
crazyflie_simulation/src/crazyflie_gazebo/launch/: crazyflie_gazebo.launch.py
crazyflie_simulation/src/crazyflie_gazebo/models/: crazyflie_world.sdf  gazebo_example_model.sdf  model.sdf  model_each_motor.sdf  wind.sdf
crazyflie_simulation/src/install/: local_setup.sh  setup.sh
crazyflie_simulation/src/log/: latest_build
dynamics/: Baseline.asv  Baseline.m  Coriolis.m  Coriolis_lin.m  Inertia.asv  bigW.asv  bigW.m  constParams.asv  constParams.m  control_stack.slx  control_stack.slx.autosave  control_stack.slx.r2023a  control_stack.slxc  eta_dyn.asv  eta_dyn.m  inertia_matrix_J.asv  inertia_matrix_J.m  p_dyn.asv  p_dyn.m  p_lin_dyn.asv  p_lin_dyn.m  rpy2rotm.asv  rpy2rotm.m  smc1.m  smc2.m  thrust_to_motor_speed.mlx  untitled.mlx
dynamics/dynamics_latex/: dynamics.dvi  dynamics.tex
dynamics/slprj/_jitprj/: jitEngineAccessInfo.mat  sCO3O36iV6PRWffWR80MuPC.l  sCO3O36iV6PRWffWR80MuPC.mat  sNulhD6evltVrsReZhqp1xE.l  sNulhD6evltVrsReZhqp1xE.mat  sO5WM6NLGyhsLgpTDL3YQw.l  sO5WM6NLGyhsLgpTDL3YQw.mat  sSh1BhBB3ZbKrJLcXXChijH.l  sSh1BhBB3ZbKrJLcXXChijH.mat  sWMQa6SkmnjMkhnqbF5ppoF.l  sWMQa6SkmnjMkhnqbF5ppoF.mat  sdutyuLfqZGyhoHU6XDbwCG.l  sdutyuLfqZGyhoHU6XDbwCG.mat  sexjfFiWMyTSyN5yw3QaQNH.l  sexjfFiWMyTSyN5yw3QaQNH.mat  sghIo8IMmNAOKiPom9gunZG.l  sghIo8IMmNAOKiPom9gunZG.mat  slBG2qqVAvXskY6GuRv5O4C.l  slBG2qqVAvXskY6GuRv5O4C.mat  so3Jf9ApMXqP0KeTdgSYl8D.l  so3Jf9ApMXqP0KeTdgSYl8D.mat  spR40ntEGKO6rxTRBWfAFOE.l  spR40ntEGKO6rxTRBWfAFOE.mat  sroLz9xv9BKoapdkH6IqsOC.l  sroLz9xv9BKoapdkH6IqsOC.mat  sum5Hus2zXCcGxaIZ4Mo7aE.mat  szMhOyejLcFKnR10iu2VndF.l  szMhOyejLcFKnR10iu2VndF.mat
dynamics/slprj/_sfprj/EMLReport/: 4frEw2fphG8lqLYJ5ZsbV.mat  7jUUCmCU6q4GAxXLxyB35F.mat  emlReportAccessInfo.mat  sCO3O36iV6PRWffWR80MuPC.mat  sNulhD6evltVrsReZhqp1xE.mat  sO5WM6NLGyhsLgpTDL3YQw.mat  sSh1BhBB3ZbKrJLcXXChijH.mat  sWMQa6SkmnjMkhnqbF5ppoF.mat  sdutyuLfqZGyhoHU6XDbwCG.mat  sexjfFiWMyTSyN5yw3QaQNH.mat  sghIo8IMmNAOKiPom9gunZG.mat  slBG2qqVAvXskY6GuRv5O4C.mat  so3Jf9ApMXqP0KeTdgSYl8D.mat  spR40ntEGKO6rxTRBWfAFOE.mat  sroLz9xv9BKoapdkH6IqsOC.mat  sum5Hus2zXCcGxaIZ4Mo7aE.mat  szMhOyejLcFKnR10iu2VndF.mat
dynamics/slprj/_sfprj/control_stack/: amsi_serial.mat
dynamics/slprj/_sfprj/precompile/: 4TG5Z7e0hL7IeKdi6uvcpH.mat  AUubJMtH92xMnk4IKUhVNB.mat  CZUZduA0bep2p4dWypiduE.mat  DOXdn7q0BnBTZXPfxgCKID.mat  N41RMixd8HpiTLa3tr5ZIG.mat  amG3bahOUfdPsvCcwHl6VB.mat  autoInferAccessInfo.mat  epYnwfj4pqn7ka7a5AycfD.mat  rfKp5gr92kp2Tquztb326.mat  wX6jm8C6T41jpIJZl5cLmF.mat  yTddbe2qih3lNNYBTh3h9B.mat
slprj/_jitprj/: jitEngineAccessInfo.mat  sroLz9xv9BKoapdkH6IqsOC.l  sroLz9xv9BKoapdkH6IqsOC.mat  sum5Hus2zXCcGxaIZ4Mo7aE.l  sum5Hus2zXCcGxaIZ4Mo7aE.mat
slprj/_sfprj/EMLReport/: emlReportAccessInfo.mat  sroLz9xv9BKoapdkH6IqsOC.mat  sum5Hus2zXCcGxaIZ4Mo7aE.mat
slprj/_sfprj/control_stack/: amsi_serial.mat
slprj/sim/varcache/control_stack/: checksumOfCache.mat  varInfo.mat
src/modules/interface/controller/: controller.h
(+69 files in other folders)
